got the displays to go between each other